intelliJ: - ottimizzazione codice - rimozione warning