@@ -2,7 +2,6 @@ package ids.unicam.GestioneContenuti;
 
 import ids.unicam.controller.ContenutoController;
 import ids.unicam.controller.ContestController;
-import ids.unicam.controller.UtentiController;
 import ids.unicam.models.Comune;
 import ids.unicam.models.Gradi;
 import ids.unicam.models.attori.*;
@@ -10,7 +9,6 @@ import ids.unicam.models.contenuti.Contest;
 import ids.unicam.models.contenuti.Itinerario;
 import ids.unicam.models.contenuti.Materiale;
 import ids.unicam.models.contenuti.POIFactory.AttivitaFactory;
-import ids.unicam.models.contenuti.POIFactory.Museo;
 import ids.unicam.models.contenuti.PuntoInteresse;
 import ids.unicam.utilites.Punto;
 import org.junit.Test;
@@ -18,9 +16,9 @@ import org.junit.Test;
 import java.time.LocalDate;
 import java.util.Date;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.*;
 
-public class JUnitTestContenuti {
+public class JUnitContenutiTest {
     @Test
     public void testCoordinate() {
         {
@@ -35,41 +33,41 @@ public class JUnitTestContenuti {
     public void creaPoi() {
 
         GestorePiattaforma gestorePiattaforma = new GestorePiattaforma();
-        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController(), new UtentiController());
+        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController());
 
         {
             gestorePiattaforma.getGestoreController().registraContributor(comune, "Mario", "Rossi", new Date(), "pass", "user");
-            Contributor contributor = comune.getContributors().get(0);
+            Contributor contributor = comune.getContributors().getFirst();
 
             assertEquals(0, comune.getContenutoController().getContenuti().size());
             AttivitaFactory attivita1 = new AttivitaFactory(LocalDate.now());
             PuntoInteresse punto1 = attivita1.creaPoi("bar", new Punto(comune.getPosizione().getLatitudine() + 0.01, comune.getPosizione().getLongitudine() + 0.01));
             contributor.addPuntoInteresse(punto1);
             assertEquals(1, comune.getContenutoController().getContenuti().size());
-            assertEquals(false, comune.getContenutoController().getContenuti().getFirst().isApproved());
+            assertFalse(comune.getContenutoController().getContenuti().getFirst().isApproved());
         }
 
         {
             gestorePiattaforma.getGestoreController().registraContributor(comune, "Mario", "Rossi", new Date(), "pass", "user");
-            gestorePiattaforma.promuovi(comune, comune.getContributors().get(0), Gradi.ContributorTrusted);
+            gestorePiattaforma.promuovi(comune, comune.getContributors().getFirst(), Gradi.ContributorTrusted);
 
-            ContributorTrusted contributorTrusted = comune.getContributorTrusteds().get(0);
+            ContributorTrusted contributorTrusted = comune.getContributorTrusteds().getFirst();
             assertEquals(1, comune.getContenutoController().getContenuti().size());
             AttivitaFactory attivita1 = new AttivitaFactory(LocalDate.now());
             PuntoInteresse punto2 = attivita1.creaPoi("bar2", new Punto(comune.getPosizione().getLatitudine() + 0.02, comune.getPosizione().getLongitudine() + 0.02));
             contributorTrusted.addPuntoInteresse(punto2);
             assertEquals(2, comune.getContenutoController().getContenuti().size());
-            assertEquals(true, comune.getContenutoController().getContenuti().getLast().isApproved());
+            assertTrue(comune.getContenutoController().getContenuti().getLast().isApproved());
         }
 
         {
             gestorePiattaforma.getGestoreController().registraContributor(comune, "Mario", "Rossi", new Date(), "pass", "user");
-            gestorePiattaforma.promuovi(comune, comune.getContributors().get(0), Gradi.ContributorTrusted);
+            gestorePiattaforma.promuovi(comune, comune.getContributors().getFirst(), Gradi.ContributorTrusted);
 
-            ContributorTrusted contributorTrusted = comune.getContributorTrusteds().get(0);
+            ContributorTrusted contributorTrusted = comune.getContributorTrusteds().getFirst();
             AttivitaFactory attivita1 = new AttivitaFactory(LocalDate.now());
             PuntoInteresse punto3 = attivita1.creaPoi("bar3", new Punto(comune.getPosizione().getLatitudine() + 2, comune.getPosizione().getLongitudine() + 2));
-            assertEquals(false, contributorTrusted.addPuntoInteresse(punto3));
+            assertFalse(contributorTrusted.addPuntoInteresse(punto3));
 
         }
 
@@ -78,13 +76,13 @@ public class JUnitTestContenuti {
     @Test
     public void creaItinerario() {
         GestorePiattaforma gestorePiattaforma = new GestorePiattaforma();
-        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController(), new UtentiController());
+        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController());
 
         {
             gestorePiattaforma.getGestoreController().registraContributor(comune, "Mario", "Rossi", new Date(), "pass", "user");
-            gestorePiattaforma.promuovi(comune, comune.getContributors().get(0), Gradi.ContributorTrusted);
+            gestorePiattaforma.promuovi(comune, comune.getContributors().getFirst(), Gradi.ContributorTrusted);
 
-            ContributorTrusted contributorTrusted = comune.getContributorTrusteds().get(0);
+            ContributorTrusted contributorTrusted = comune.getContributorTrusteds().getFirst();
             AttivitaFactory attivita1 = new AttivitaFactory(LocalDate.now());
             contributorTrusted.addPuntoInteresse(attivita1.creaPoi("bar2", new Punto(comune.getPosizione().getLatitudine() + 0.03, comune.getPosizione().getLongitudine() + 0.03)));
             contributorTrusted.addPuntoInteresse(attivita1.creaPoi("barcentrale", new Punto(comune.getPosizione().getLatitudine() - 0.02, comune.getPosizione().getLongitudine() - 0.02)));
@@ -104,7 +102,7 @@ public class JUnitTestContenuti {
     @Test
     public void creaContest() {
         GestorePiattaforma gestorePiattaforma = new GestorePiattaforma();
-        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController(), new UtentiController());
+        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController());
 
         Contributor contributor = gestorePiattaforma.getGestoreController().registraContributor(comune, "mario", "rossi", new Date(), "ciao", "mr");
         gestorePiattaforma.promuovi(comune, contributor, Gradi.Animatore);
@@ -122,7 +120,7 @@ public class JUnitTestContenuti {
     @Test
     public void creaContestSuInvito() {
         GestorePiattaforma gestorePiattaforma = new GestorePiattaforma();
-        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController(), new UtentiController());
+        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController());
 
         Contributor contributor = gestorePiattaforma.getGestoreController().registraContributor(comune, "mario", "rossi", new Date(), "ciao", "mr");
         gestorePiattaforma.promuovi(comune, contributor, Gradi.Animatore);
@@ -135,14 +133,14 @@ public class JUnitTestContenuti {
         animatore.invita(comune.getContestController().getContests().getFirst(), turistaLoggato);
         turistaLoggato.accettaInvito(turistaLoggato.getInvitiRicevuti().getFirst());
         assertEquals(1, comune.getContestController().getContests().getFirst().getPartecipanti().size());
-        assertEquals(true, comune.getContestController().getContests().getFirst().equals(comune.getContestController().getContestByTurist(turistaLoggato.getId()).getFirst()));
+        assertEquals(comune.getContestController().getContests().getFirst(), comune.getContestController().getContestByTurist(turistaLoggato.getId()).getFirst());
 
     }
 
     @Test
     public void aggiuntaMateriale() {
         GestorePiattaforma gestorePiattaforma = new GestorePiattaforma();
-        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController(), new UtentiController());
+        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController());
         Contributor contributor = gestorePiattaforma.getGestoreController().registraContributor(comune, "mario", "rossi", new Date(), "ciao", "mr");
         gestorePiattaforma.getGestoreController().registraTurista("andrea", "neri", new Date(), "eroe", "AN2");
         TuristaLoggato turistaLoggato = gestorePiattaforma.getGestoreController().getUtentiController().getTuristi().getFirst();
@@ -170,7 +168,7 @@ public class JUnitTestContenuti {
     @Test
     public void approvaMaterialeByAnimatore(){
         GestorePiattaforma gestorePiattaforma = new GestorePiattaforma();
-        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController(), new UtentiController());
+        Comune comune = new Comune("Milano", gestorePiattaforma, new ContenutoController(), new ContestController());
         Contributor contributor = gestorePiattaforma.getGestoreController().registraContributor(comune, "mario", "rossi", new Date(), "ciao", "mr");
         gestorePiattaforma.getGestoreController().registraTurista("andrea", "neri", new Date(), "eroe", "AN2");
         TuristaLoggato turistaLoggato = gestorePiattaforma.getGestoreController().getUtentiController().getTuristi().getFirst();
@@ -180,11 +178,11 @@ public class JUnitTestContenuti {
         Contest contest = animatore.creaContest("monumento", "Foto più bella", true);
         Materiale materiale = new Materiale(true, turistaLoggato);
         turistaLoggato.addMaterialeContest(contest, materiale);
-        assertEquals(false, materiale.isApproved());
+        assertFalse(materiale.isApproved());
         assertEquals(1, contest.getMaterialiContest().size());
 
         animatore.approva(materiale);
-        assertEquals(true, materiale.isApproved());
+        assertTrue(materiale.isApproved());
 
 
     }
